# metareflect

tooling/: CMakeLists.txt  annotations.h  classfinder.h  fieldgenerator.h  fieldgenerator.hpp  functiongenerator.h  reflect.cpp  reflectedclass.cpp  reflectedclass.h  utils.cpp  utils.h
